RESOLVED FIXED74246
#ifdef the parts of Mac platform which should not be used on iOS
https://bugs.webkit.org/show_bug.cgi?id=74246
Summary #ifdef the parts of Mac platform which should not be used on iOS
Benjamin Poulain
Reported 2011-12-10 15:56:10 PST
#ifdef some functions of the Mac platform
Attachments
Patch (11.06 KB, patch)
2011-12-10 16:21 PST, Benjamin Poulain
no flags
Patch (8.78 KB, patch)
2011-12-10 20:40 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-12-10 16:21:54 PST
David Kilzer (:ddkilzer)
Comment 2 2011-12-10 20:08:17 PST
Comment on attachment 118696 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=118696&action=review I don't think we should merge the WebThread ASSERT() changes yet. Also, the BUILDING_ON_<BIG_CAT> macros shouldn't be defined on iOS, so that change shouldn't be necessary. > Source/WebCore/platform/mac/EmptyProtocolDefinitions.h:40 > +#if (defined(BUILDING_ON_LEOPARD) || defined(BUILDING_ON_SNOW_LEOPARD)) && !PLATFORM(IOS) Is this change necessary? BUILDING_ON_LEOPARD and BUILDING_ON_SNOW_LEOPARD should never be defined when building iOS. > Source/WebCore/platform/mac/Language.mm:51 > +#if !PLATFORM(IOS) > ASSERT(isMainThread()); > +#else > + ASSERT(isMainThread() || pthread_main_np()); > +#endif This change is related to the WebThread on iOS. > Source/WebCore/platform/mac/Language.mm:69 > +#if !PLATFORM(IOS) > ASSERT(isMainThread()); > +#else > + ASSERT(isMainThread() || pthread_main_np()); > +#endif Ditto. > Source/WebCore/platform/mac/Language.mm:102 > +#if !PLATFORM(IOS) > ASSERT(isMainThread()); > +#else > + ASSERT(isMainThread() || pthread_main_np()); > +#endif Ditto. > Source/WebCore/platform/mac/LocalizedStringsMac.mm:42 > + // Can be called on a dispatch queue when initializing strings on iOS > + // See LoadWebLocalizedStrings and <rdar://problem/7902473>. First comment needs a period at the end of the sentence. > Source/WebCore/platform/mac/SharedBufferMac.mm:57 > +#if !PLATFORM(IOS) > JSC::initializeThreading(); > #if PLATFORM(QT) && USE(QTKIT) > WTF::initializeMainThread(); > #else > WTF::initializeMainThreadToProcessMainThread(); > #endif > +#endif // !PLATFORM(IOS) This change is related to the WebThread on iOS.
Benjamin Poulain
Comment 3 2011-12-10 20:40:08 PST
David Kilzer (:ddkilzer)
Comment 4 2011-12-10 20:57:57 PST
Comment on attachment 118703 [details] Patch r=me
WebKit Review Bot
Comment 5 2011-12-10 22:20:47 PST
Comment on attachment 118703 [details] Patch Clearing flags on attachment: 118703 Committed r102535: <http://trac.webkit.org/changeset/102535>
WebKit Review Bot
Comment 6 2011-12-10 22:20:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.