#ifdef the parts of the Mac platform which should not be used on iOS https://bugs.webkit.org/show_bug.cgi?id=74246

Patch by Benjamin Poulain <bpoulain@apple.com> on 2011-12-10
Reviewed by David Kilzer.

* Configurations/WebCore.xcconfig:
* platform/FileSystem.cpp:
* platform/mac/FileSystemMac.mm:
* platform/mac/Language.mm:
(+[WebLanguageChangeObserver _webkit_languagePreferencesDidChange]):
(WebCore::createHTTPStyleLanguageCode):
(WebCore::platformDefaultLanguage):
* platform/mac/LocalizedStringsMac.mm:
(WebCore::localizedString):
(+[WebCoreSharedBufferData initialize]):
* platform/mac/WebCoreNSStringExtras.h:
* platform/mac/WebCoreNSStringExtras.mm:
* platform/mac/WebFontCache.mm:
* platform/mac/WebNSAttributedStringExtras.mm: The value NSAttachmentCharacter is
not defined in the iOS SDK so we add it here.

Canonical link: https://commits.webkit.org/90933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102535 268f45cc-cd09-0410-ab3c-d52691b4dbfc