Source/WebCore/platform/mac/Language.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2003, 2005, 2006, 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2003, 2005, 2006, 2010, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -102,6 +102,7 @@ String platformDefaultLanguage()
 
     NSString *code = [[preferredLanguageCode retain] autorelease];
 
+#if !PLATFORM(IOS)
     static bool languageChangeObserverAdded;
     if (!languageChangeObserverAdded) {
         [[NSDistributedNotificationCenter defaultCenter] addObserver:[WebLanguageChangeObserver self]
@@ -110,6 +111,7 @@ String platformDefaultLanguage()
                                                               object:nil];
         languageChangeObserverAdded = true;
     }
+#endif // !PLATFORM(IOS)
 
     return code;
 
