Source/WebCore/platform/mac/WebCoreNSStringExtras.h
@@ -43,7 +43,9 @@ BOOL stringIsCaseInsensitiveEqualToString(NSString *first, NSString *second);
 BOOL hasCaseInsensitiveSuffix(NSString *string, NSString *suffix);
 BOOL hasCaseInsensitiveSubstring(NSString *string, NSString *substring);
 NSString *filenameByFixingIllegalCharacters(NSString *string);
+#if !PLATFORM(IOS)
 CFStringEncoding stringEncodingForResource(Handle resource);
+#endif
 
 #ifdef __cplusplus
 }
